# yew-app

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
src/: main.rs
src/components/: app_navbar.rs  basic_container.rs  log_button.rs  mod.rs  portfolio_card.rs
src/components/portfolio/: mod.rs  portfolio_card.rs
src/views/: app.rs  game_of_life.rs  mod.rs  portfolio.rs
src/views/portfolio/: core.rs
styles/: index.css
