[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
yew = { version = "0.20", features = ["csr"] }
yew_icons = { version = "0.7", features = ["LucideHome"] }
yew-canvas = "0.2.4"
